feature selection with outlier removal

--- a/GroupKFold_feature_engineering/PCA_et.ipynb
+++ b/GroupKFold_feature_engineering/PCA_et.ipynb
@@ -20,7 +20,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from mlxtend.feature_selection import SequentialFeatureSelector"
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -549,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Fisher Score Feature Selection**"
+    "##### **Principal Component Analysis**"
    ]
   },
   {
@@ -558,240 +559,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import f_classif"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_extra_trees_with_fisher_score(df, num_features):\n",
-    "    \n",
+    "def evaluate_extra_trees_with_pca(df, n_components=None):\n",
     "    # Set the Surfaces as groups\n",
     "    groups = df['SurID']\n",
     "    X = df.drop(['Status', 'SurID'], axis=1)\n",
     "    y = df['Status']\n",
     "\n",
-    "    # Feature Selection with Fisher Score\n",
-    "    selector = SelectKBest(score_func=f_classif, k=num_features)\n",
-    "    X_selected = selector.fit_transform(X, y)\n",
-    "\n",
-    "    # Creating the Extra Trees classifier\n",
+    "    # Creating the Extra Trees classifier with PCA in a pipeline\n",
     "    et = ExtraTreesClassifier(random_state=1234)\n",
+    "    pca = PCA(n_components=n_components, random_state=1234)\n",
+    "    pipeline = Pipeline(steps=[('pca', pca), ('extra_trees', et)])\n",
     "    \n",
     "    # Using GroupKFold for classification tasks\n",
     "    cv = GroupKFold(n_splits=10)\n",
     "    \n",
     "    # Getting cross-validation scores\n",
-    "    scores = cross_val_score(et, X_selected, y, cv=cv, scoring='accuracy', groups=groups, n_jobs=-1)\n",
+    "    scores = cross_val_score(pipeline, X, y, cv=cv, scoring='accuracy', groups=groups, n_jobs=-1)\n",
     "    \n",
     "    # Displaying the results\n",
-    "    print(f'{et.__class__.__name__} Cross-Validation Accuracy: {np.mean(scores):.4f} +/- {np.std(scores):.4f}')\n"
+    "    print(f'{pipeline.__class__.__name__} with PCA Cross-Validation Accuracy: {np.mean(scores):.4f} +/- {np.std(scores):.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ExtraTreesClassifier Cross-Validation Accuracy: 0.4748 +/- 0.0860\n"
-     ]
-    }
-   ],
-   "source": [
-    "evaluate_extra_trees_with_fisher_score(wavelength_df, num_features=111)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### **Permutation Importance**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.inspection import permutation_importance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the groups for surfaces\n",
-    "groups = wavelength_df['SurID']\n",
-    "X = wavelength_df.drop(['Status', 'SurID'], axis=1)\n",
-    "y = wavelength_df['Status']\n",
-    "\n",
-    "# Creating the Extra Trees classifier\n",
-    "et = ExtraTreesClassifier(random_state=1234)\n",
-    "\n",
-    "# Fitting the model on the entire dataset\n",
-    "et.fit(X, y)\n",
-    "\n",
-    "# Calculating permutation importance\n",
-    "result = permutation_importance(et, X, y, n_repeats=1, random_state=1234, n_jobs=-1)\n",
-    "\n",
-    "# Creating a DataFrame for feature importance\n",
-    "feature_importances_df = pd.DataFrame({\n",
-    "    'Feature': X.columns,\n",
-    "    'Importance Mean': result.importances_mean,\n",
-    "    'Importance Std Dev': result.importances_std\n",
-    "})\n",
-    "\n",
-    "# Displaying the DataFrame\n",
-    "print(\"\\nFeature importance:\")\n",
-    "print(feature_importances_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function permutation_importance in module sklearn.inspection._permutation_importance:\n",
-      "\n",
-      "permutation_importance(estimator, X, y, *, scoring=None, n_repeats=5, n_jobs=None, random_state=None, sample_weight=None, max_samples=1.0)\n",
-      "    Permutation importance for feature evaluation [BRE]_.\n",
-      "    \n",
-      "    The :term:`estimator` is required to be a fitted estimator. `X` can be the\n",
-      "    data set used to train the estimator or a hold-out set. The permutation\n",
-      "    importance of a feature is calculated as follows. First, a baseline metric,\n",
-      "    defined by :term:`scoring`, is evaluated on a (potentially different)\n",
-      "    dataset defined by the `X`. Next, a feature column from the validation set\n",
-      "    is permuted and the metric is evaluated again. The permutation importance\n",
-      "    is defined to be the difference between the baseline metric and metric from\n",
-      "    permutating the feature column.\n",
-      "    \n",
-      "    Read more in the :ref:`User Guide <permutation_importance>`.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    estimator : object\n",
-      "        An estimator that has already been :term:`fitted` and is compatible\n",
-      "        with :term:`scorer`.\n",
-      "    \n",
-      "    X : ndarray or DataFrame, shape (n_samples, n_features)\n",
-      "        Data on which permutation importance will be computed.\n",
-      "    \n",
-      "    y : array-like or None, shape (n_samples, ) or (n_samples, n_classes)\n",
-      "        Targets for supervised or `None` for unsupervised.\n",
-      "    \n",
-      "    scoring : str, callable, list, tuple, or dict, default=None\n",
-      "        Scorer to use.\n",
-      "        If `scoring` represents a single score, one can use:\n",
-      "    \n",
-      "        - a single string (see :ref:`scoring_parameter`);\n",
-      "        - a callable (see :ref:`scoring`) that returns a single value.\n",
-      "    \n",
-      "        If `scoring` represents multiple scores, one can use:\n",
-      "    \n",
-      "        - a list or tuple of unique strings;\n",
-      "        - a callable returning a dictionary where the keys are the metric\n",
-      "          names and the values are the metric scores;\n",
-      "        - a dictionary with metric names as keys and callables a values.\n",
-      "    \n",
-      "        Passing multiple scores to `scoring` is more efficient than calling\n",
-      "        `permutation_importance` for each of the scores as it reuses\n",
-      "        predictions to avoid redundant computation.\n",
-      "    \n",
-      "        If None, the estimator's default scorer is used.\n",
-      "    \n",
-      "    n_repeats : int, default=5\n",
-      "        Number of times to permute a feature.\n",
-      "    \n",
-      "    n_jobs : int or None, default=None\n",
-      "        Number of jobs to run in parallel. The computation is done by computing\n",
-      "        permutation score for each columns and parallelized over the columns.\n",
-      "        `None` means 1 unless in a :obj:`joblib.parallel_backend` context.\n",
-      "        `-1` means using all processors. See :term:`Glossary <n_jobs>`\n",
-      "        for more details.\n",
-      "    \n",
-      "    random_state : int, RandomState instance, default=None\n",
-      "        Pseudo-random number generator to control the permutations of each\n",
-      "        feature.\n",
-      "        Pass an int to get reproducible results across function calls.\n",
-      "        See :term:`Glossary <random_state>`.\n",
-      "    \n",
-      "    sample_weight : array-like of shape (n_samples,), default=None\n",
-      "        Sample weights used in scoring.\n",
-      "    \n",
-      "        .. versionadded:: 0.24\n",
-      "    \n",
-      "    max_samples : int or float, default=1.0\n",
-      "        The number of samples to draw from X to compute feature importance\n",
-      "        in each repeat (without replacement).\n",
-      "    \n",
-      "        - If int, then draw `max_samples` samples.\n",
-      "        - If float, then draw `max_samples * X.shape[0]` samples.\n",
-      "        - If `max_samples` is equal to `1.0` or `X.shape[0]`, all samples\n",
-      "          will be used.\n",
-      "    \n",
-      "        While using this option may provide less accurate importance estimates,\n",
-      "        it keeps the method tractable when evaluating feature importance on\n",
-      "        large datasets. In combination with `n_repeats`, this allows to control\n",
-      "        the computational speed vs statistical accuracy trade-off of this method.\n",
-      "    \n",
-      "        .. versionadded:: 1.0\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    result : :class:`~sklearn.utils.Bunch` or dict of such instances\n",
-      "        Dictionary-like object, with the following attributes.\n",
-      "    \n",
-      "        importances_mean : ndarray of shape (n_features, )\n",
-      "            Mean of feature importance over `n_repeats`.\n",
-      "        importances_std : ndarray of shape (n_features, )\n",
-      "            Standard deviation over `n_repeats`.\n",
-      "        importances : ndarray of shape (n_features, n_repeats)\n",
-      "            Raw permutation importance scores.\n",
-      "    \n",
-      "        If there are multiple scoring metrics in the scoring parameter\n",
-      "        `result` is a dict with scorer names as keys (e.g. 'roc_auc') and\n",
-      "        `Bunch` objects like above as values.\n",
-      "    \n",
-      "    References\n",
-      "    ----------\n",
-      "    .. [BRE] :doi:`L. Breiman, \"Random Forests\", Machine Learning, 45(1), 5-32,\n",
-      "             2001. <10.1023/A:1010933404324>`\n",
-      "    \n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> from sklearn.linear_model import LogisticRegression\n",
-      "    >>> from sklearn.inspection import permutation_importance\n",
-      "    >>> X = [[1, 9, 9],[1, 9, 9],[1, 9, 9],\n",
-      "    ...      [0, 9, 9],[0, 9, 9],[0, 9, 9]]\n",
-      "    >>> y = [1, 1, 1, 0, 0, 0]\n",
-      "    >>> clf = LogisticRegression().fit(X, y)\n",
-      "    >>> result = permutation_importance(clf, X, y, n_repeats=10,\n",
-      "    ...                                 random_state=0)\n",
-      "    >>> result.importances_mean\n",
-      "    array([0.4666..., 0.       , 0.       ])\n",
-      "    >>> result.importances_std\n",
-      "    array([0.2211..., 0.       , 0.       ])\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(permutation_importance)"
+    "evaluate_extra_trees_with_pca(wavelength_df, 0.975)"
    ]
   }
  ],
