New optuna search

--- a/feature_engineering/quick_spectra_cleaning.ipynb
+++ b/feature_engineering/quick_spectra_cleaning.ipynb
@@ -268,12 +268,20 @@
     "# p = 0.049\n",
     "\n",
     "# Clean Params for Pagerank weights\n",
-    "despike_ma = 19\n",
-    "despike_threshold = 5.75\n",
-    "lam = 10**8\n",
-    "p = 0.049\n",
-    "window_size = 11\n",
-    "poly_order = 2"
+    "# despike_ma = 19\n",
+    "# despike_threshold = 5.75\n",
+    "# lam = 10**8\n",
+    "# p = 0.049\n",
+    "# window_size = 11\n",
+    "# poly_order = 2\n",
+    "\n",
+    "pagerank_cutoff = 0.902461\n",
+    "despike_ma = 57\n",
+    "despike_threshold = 3.75\n",
+    "lam = 10 ** 11\n",
+    "p = 0.074\n",
+    "window_size = 51\n",
+    "poly_order = 3"
    ]
   },
   {
