--- a/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
+++ b/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "[5 rows x 2051 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,28 +706,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    6.239205e+06\n",
+       "mean     9.612405e-01\n",
+       "std      1.574999e-01\n",
+       "min      1.869514e-01\n",
+       "25%      9.175536e-01\n",
+       "50%      9.898063e-01\n",
+       "75%      1.054899e+00\n",
+       "max      1.316965e+00\n",
+       "Name: PageRank, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['PageRank'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-04-13 13:18:27,399] A new study created in memory with name: no-name-4e5db681-efae-4313-9b20-454c19276b28\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[W 2024-04-13 13:18:28,548] Trial 0 failed with parameters: {'pagerank_cutoff': 1.3851410887869295, 'despike': True, 'baseline_correct': False, 'smoothing': False, 'scaling': True, 'despike_ma': 78, 'despike_threshold': 5.5, 'scaling_type': 'normal', 'classifier': 'ExtraTrees', 'et_n_estimators': 26, 'et_max_depth': 10, 'et_criterion': 'gini'} because of the following error: ValueError('Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=0.').\n",
+      "[I 2024-04-13 13:29:18,257] A new study created in memory with name: no-name-9289d6a8-b174-4c11-b323-14438c4be885\n",
+      "[W 2024-04-13 13:29:21,912] Trial 11 failed with parameters: {'pagerank_cutoff': 1.1723171220038593, 'despike': False, 'baseline_correct': False, 'smoothing': False, 'scaling': False, 'classifier': 'SVC', 'svc_c': 0.25105947584055227, 'svc_kernel': 'sigmoid', 'svc_gamma': 'scale'} because of the following error: ShutdownExecutorError('cannot schedule new futures after shutdown').\n",
       "Traceback (most recent call last):\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py\", line 196, in _run_trial\n",
       "    value_or_values = func(trial)\n",
       "                      ^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_16108\\2937850195.py\", line 110, in objective\n",
-      "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_19604\\2979054450.py\", line 98, in objective\n",
+      "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
       "    return func(*args, **kwargs)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^\n",
@@ -737,29 +759,45 @@
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\parallel.py\", line 67, in __call__\n",
       "    return super().__call__(iterable_with_config)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1863, in __call__\n",
-      "    return output if self.return_generator else list(output)\n",
-      "                                                ^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1789, in _get_sequential_output\n",
-      "    for func, args, kwargs in iterable:\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\parallel.py\", line 63, in <genexpr>\n",
-      "    iterable_with_config = (\n",
-      "                           ^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 430, in <genexpr>\n",
-      "    results = parallel(\n",
-      "                      ^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 370, in split\n",
-      "    raise ValueError(\n",
-      "ValueError: Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=0.\n",
-      "[W 2024-04-13 13:18:31,063] Trial 0 failed with value None.\n",
-      "[W 2024-04-13 13:18:37,369] Trial 4 failed with parameters: {'pagerank_cutoff': 1.2389204840178083, 'despike': True, 'baseline_correct': True, 'smoothing': False, 'scaling': False, 'despike_ma': 26, 'despike_threshold': 5.5, 'lam': 100000, 'p': 0.07, 'classifier': 'RandomForest', 'rf_n_estimators': 21, 'rf_max_depth': 6, 'rf_criterion': 'log_loss'} because of the following error: ValueError('Cannot have number of splits n_splits=10 greater than the number of groups: 7.').\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1950, in __call__\n",
+      "    next(output)\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1588, in _get_outputs\n",
+      "    self._start(iterator, pre_dispatch)\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1571, in _start\n",
+      "    if self.dispatch_one_batch(iterator):\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1462, in dispatch_one_batch\n",
+      "    self._dispatch(tasks)\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1384, in _dispatch\n",
+      "    job = self._backend.apply_async(batch, callback=batch_tracker)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\_parallel_backends.py\", line 600, in apply_async\n",
+      "    future = self._workers.submit(func)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\externals\\loky\\reusable_executor.py\", line 225, in submit\n",
+      "    return super().submit(fn, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\externals\\loky\\process_executor.py\", line 1228, in submit\n",
+      "    raise ShutdownExecutorError(\n",
+      "joblib.externals.loky.process_executor.ShutdownExecutorError: cannot schedule new futures after shutdown\n",
+      "[W 2024-04-13 13:29:21,931] Trial 8 failed with parameters: {'pagerank_cutoff': 1.2597789796455052, 'despike': False, 'baseline_correct': False, 'smoothing': False, 'scaling': False, 'classifier': 'RandomForest', 'rf_n_estimators': 37, 'rf_max_depth': 2, 'rf_criterion': 'entropy'} because of the following error: ValueError('Cannot have number of splits n_splits=10 greater than the number of groups: 5.').\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1423, in dispatch_one_batch\n",
+      "    tasks = self._ready_batches.get(block=False)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\queue.py\", line 168, in get\n",
+      "    raise Empty\n",
+      "_queue.Empty\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
       "Traceback (most recent call last):\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py\", line 196, in _run_trial\n",
       "    value_or_values = func(trial)\n",
       "                      ^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_16108\\2937850195.py\", line 110, in objective\n",
-      "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_19604\\2979054450.py\", line 98, in objective\n",
+      "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
       "    return func(*args, **kwargs)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^\n",
@@ -769,11 +807,16 @@
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\parallel.py\", line 67, in __call__\n",
       "    return super().__call__(iterable_with_config)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1863, in __call__\n",
-      "    return output if self.return_generator else list(output)\n",
-      "                                                ^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1789, in _get_sequential_output\n",
-      "    for func, args, kwargs in iterable:\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1950, in __call__\n",
+      "    next(output)\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1588, in _get_outputs\n",
+      "    self._start(iterator, pre_dispatch)\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1571, in _start\n",
+      "    if self.dispatch_one_batch(iterator):\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1434, in dispatch_one_batch\n",
+      "    islice = list(itertools.islice(iterator, big_batch_size))\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\parallel.py\", line 63, in <genexpr>\n",
       "    iterable_with_config = (\n",
       "                           ^\n",
@@ -788,8 +831,12 @@
       "    for test_index in self._iter_test_indices(X, y, groups):\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 570, in _iter_test_indices\n",
       "    raise ValueError(\n",
-      "ValueError: Cannot have number of splits n_splits=10 greater than the number of groups: 7.\n",
-      "[W 2024-04-13 13:18:37,467] Trial 4 failed with value None.\n"
+      "ValueError: Cannot have number of splits n_splits=10 greater than the number of groups: 5.\n",
+      "[W 2024-04-13 13:29:22,279] Trial 11 failed with value None.\n",
+      "[W 2024-04-13 13:29:22,443] Trial 8 failed with value None.\n",
+      "[I 2024-04-13 13:29:28,699] Trial 10 finished with value: 0.4746751592356687 and parameters: {'pagerank_cutoff': 0.21004010021230382, 'despike': False, 'baseline_correct': False, 'smoothing': False, 'scaling': False, 'classifier': 'ExtraTrees', 'et_n_estimators': 52, 'et_max_depth': 4, 'et_criterion': 'log_loss'}. Best is trial 10 with value: 0.4746751592356687.\n",
+      "[I 2024-04-13 13:29:29,999] Trial 2 finished with value: 0.4738636363636363 and parameters: {'pagerank_cutoff': 1.2065995063370414, 'despike': True, 'baseline_correct': False, 'smoothing': True, 'scaling': False, 'despike_ma': 76, 'despike_threshold': 8.25, 'window_size': 160, 'poly_order': 3, 'classifier': 'AdaBoost', 'ab_n_estimators': 130, 'ab_learning_rate': 0.029437844187008698}. Best is trial 10 with value: 0.4746751592356687.\n",
+      "[I 2024-04-13 13:29:47,478] Trial 5 finished with value: 0.3497727272727273 and parameters: {'pagerank_cutoff': 1.1696467941339312, 'despike': False, 'baseline_correct': True, 'smoothing': True, 'scaling': False, 'lam': 100000, 'p': 0.017, 'window_size': 157, 'poly_order': 3, 'classifier': 'SVC', 'svc_c': 0.0010845432555452515, 'svc_kernel': 'linear', 'svc_gamma': 'scale'}. Best is trial 10 with value: 0.4746751592356687.\n"
      ]
     }
    ],
@@ -797,7 +844,7 @@
     "def objective(trial):\n",
     "\n",
     "    # Decide which cleaning steps to implement\n",
-    "    pagerank_cutoff = trial.suggest_float('pagerank_cutoff', 0, 1.5)\n",
+    "    pagerank_cutoff = trial.suggest_float('pagerank_cutoff', 0, 1.32)\n",
     "    despike = trial.suggest_categorical('despike', [True, False])\n",
     "    baseline_correct = trial.suggest_categorical('baseline_correct', [True, False])\n",
     "    smoothing = trial.suggest_categorical('smoothing', [True, False])\n",
@@ -841,7 +888,7 @@
     "    groups = wavelength_df['SurID']\n",
     "\n",
     "    # Suggest classifier type\n",
-    "    classifier_name = trial.suggest_categorical(\"classifier\", [\"ExtraTrees\", \"RandomForest\", \"SVC\", \"AdaBoost\", \"XGBoost\", \"AdaBoostExtraTrees\"])    \n",
+    "    classifier_name = trial.suggest_categorical(\"classifier\", [\"ExtraTrees\", \"RandomForest\", \"SVC\", \"AdaBoost\", \"AdaBoostExtraTrees\"])    \n",
     "    \n",
     "    if classifier_name == \"ExtraTrees\":\n",
     "        classifier = ExtraTreesClassifier(\n",
@@ -874,18 +921,6 @@
     "            random_state=1234,\n",
     "        )\n",
     "\n",
-    "    elif classifier_name == \"XGBoost\":\n",
-    "        classifier = XGBClassifier(\n",
-    "            n_estimators=trial.suggest_int(\"xgb_n_estimators\", 10, 300),\n",
-    "            max_depth=trial.suggest_int(\"xgb_max_depth\", 2, 32, log=True),\n",
-    "            learning_rate=trial.suggest_float(\"xgb_learning_rate\", 0.01, 1.0, log=True),\n",
-    "            subsample=trial.suggest_float(\"xgb_subsample\", 0.5, 1.0),\n",
-    "            colsample_bytree=trial.suggest_float(\"xgb_colsample_bytree\", 0.5, 1.0),\n",
-    "            use_label_encoder=False,\n",
-    "            eval_metric='mlogloss',\n",
-    "            random_state=1234,\n",
-    "        )\n",
-    "\n",
     "    else:\n",
     "        base_et = ExtraTreesClassifier(\n",
     "            n_estimators=trial.suggest_int(\"abet_et_n_estimators\", 10, 100),\n",
@@ -894,7 +929,7 @@
     "            random_state=1234,\n",
     "        )\n",
     "        classifier = AdaBoostClassifier(\n",
-    "            base_estimator=base_et,\n",
+    "            estimator=base_et,\n",
     "            n_estimators=trial.suggest_int(\"abet_n_estimators\", 30, 300),\n",
     "            learning_rate=trial.suggest_float(\"abet_learning_rate\", 0.01, 1.0, log=True),\n",
     "            random_state=1234,\n",
@@ -903,7 +938,7 @@
     "    cv = GroupKFold(n_splits=10)\n",
     "\n",
     "    # Perform cross-validation\n",
-    "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
+    "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
     "\n",
     "    # Return the average accuracy across all folds\n",
     "    return np.mean(scores['test_score'])\n",
